test/fail/integration/_fail_grammar_decl_3.hs
x :: Int -> Int
x y = print
main = print x